--- a/src/assets/css/globalstyle.css
+++ b/src/assets/css/globalstyle.css
@@ -2253,6 +2253,10 @@ h3 a:hover{
 
 }
 
+.text-responsive {
+  font-size: calc(100% + 1vw + 1vh);
+}
+
 .home-1 h3 a {
   color: #3a1354;
 }
@@ -4706,7 +4710,7 @@ h3 a:hover{
 .contact-style-two .default-form .form-group textarea {
   position: relative;
   display: block;
-  width: 100%;
+  /* width: 100%; */
   height: 60px;
   border: 1px solid #dedede;
   border-radius: 20px;
