--- a/src/assets/css/globalstyle.css
+++ b/src/assets/css/globalstyle.css
@@ -1056,10 +1056,10 @@ img {
 .main-menu .navigation > li.dropdown > a:before {
   position: absolute;
   content: "\f107";
-  font-family: 'Font Awesome 5 Pro';
-  top: 0px;
-  right: 0px;
-  font-weight: 700;
+  font-family: 'Font Awesome 6 Free';
+  top: 1px;
+  right: -6px;
+  font-weight: 900;
 }
 
 .main-menu .navigation > li.current > a,
